# pre_main_runner

./: CMakeLists.txt  readme.md
include/: pre_main_runner.hpp
tests/: pre_main_runner.cpp
